<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartService" />

    <Button
        android:id="@+id/btn_stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StopService" />

    <Button
        android:id="@+id/btn_bind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BindService" />

    <Button
        android:id="@+id/btn_unbind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service" />

    <Button
        android:id="@+id/btn_music_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_play" />

    <Button
        android:id="@+id/btn_music_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_pause" />

    <Button
        android:id="@+id/btn_music_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_before" />

    <Button
        android:id="@+id/btn_music_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_next" />

    <Button
        android:id="@+id/btn_music_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_random" />

    <Button
        android:id="@+id/btn_load_http_sources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_http_resoutces" />

</LinearLayout>