<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wl.pluto.plutochat.activity.ManagerBookActivity">

    <Button
        android:id="@+id/btn_manager_get_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_manager_get_book" />

    <Button
        android:id="@+id/btn_manager_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_manager_add_book"/>

    <Button
        android:id="@+id/btn_manager_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_manager_register"/>

</LinearLayout>
