<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical"
    tools:context="com.wl.pluto.plutochat.activity.ProfileActivity">

    <LinearLayout
        style="@style/layout_public_style"
        android:paddingLeft="@dimen/dimen_10">

        <ImageView
            android:id="@+id/iv_profile_head_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            android:contentDescription="@null"
            android:src="@mipmap/head_image_default1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_profile_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_me_name"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_text_size_18" />

            <TextView
                android:id="@+id/tv_profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_profile_nick_name"
                android:layout_alignStart="@id/tv_profile_nick_name"
                android:layout_below="@id/tv_profile_nick_name"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/text_my_profile_chat_id" />

        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_profile_set_remark_and_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/public_text_background"
        android:padding="@dimen/dimen_20"
        android:text="@string/profile_set_remark_and_tag"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_16" />


    <LinearLayout
        style="@style/layout_public_style"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10">

            <!-- 地区-->
            <TextView
                android:id="@+id/tv_profile_region"
                style="@style/text_color_black_public_style"
                android:text="@string/profile_region" />

            <!-- 地区-->
            <TextView
                android:id="@+id/tv_profile_region_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dimen_10"
                android:text="@string/profile_chongqing_china"
                android:textSize="@dimen/dimen_text_size_16" />
        </LinearLayout>

        <TextView style="@style/view_public_style" />

        <LinearLayout
            style="@style/layout_public_background_change_style"
            android:orientation="horizontal">


            <!-- 相册 -->
            <TextView
                android:id="@+id/tv_profile_album"
                style="@style/text_color_black_public_style"
                android:text="@string/profile_album" />

            <ImageView
                android:id="@+id/iv_profile_album1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:src="@mipmap/profile_album_01" />

            <ImageView
                android:id="@+id/iv_profile_album2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:src="@mipmap/profile_album_02" />


            <ImageView
                android:id="@+id/iv_profile_album3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:src="@mipmap/profile_album_03" />

        </LinearLayout>

        <TextView style="@style/view_public_style" />

        <!-- more-->
        <TextView
            android:id="@+id/tv_profile_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/public_text_background"
            android:padding="@dimen/dimen_20"
            android:text="@string/profile_more"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_size_16" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_profile_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@color/common_green"
        android:text="@string/btn_text_send_message" />
</LinearLayout>
